--- a/blog05.html
+++ b/blog05.html
@@ -63,7 +63,8 @@
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
 						<li><a href="index.html" data-nav-section="work">Work</a></li>
-						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blog</a></li>
+						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
+						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -103,16 +104,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-8 ftco-animate">
-	            <h1 class="mb-3 font-weight-bold">Entity Relationship Diagram (ER Diagram) SQL</h1>
-
-					<span>Written by</span>
+	            <h7 class="mb-3 font-weight-bold">Entity Relationship Diagram (ER Diagram) SQL</h7>
+					<p>Written by</p>
 					<h3><a href="index.html"> Carissa O'Connell</a></h3>
 					<p>November 20, 2022; Updated: Jan 2023</p>
 
 					<!-- Blog -->
-					<div class="unique-p"> 
-						<p><b>Entity Relationship Diagram (ER Diagram)</b></p>
-					</div>
+						<h8><b>Entity Relationship Diagram (ER Diagram)</b></h8>
 
 					<p>An ER diagram is a visual representation of the relationships between entities
                         stored in a database. The diagram acts as a framework of specialized symbols
@@ -120,9 +118,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
                         on three concepts: entities, attributes, and relationships. 
                     </p>
 
-                    <div class="unique-p"> 
-						<p><b>Benefits of an ER Diagram</b></p>
-					</div>
+						<h9><b>Benefits of an ER Diagram</b></h9>
 
                     <ul>
                         <li>Helps to define terms related to entity relationship modeling</li>
@@ -131,9 +127,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
                         <li>ER diagrams can be used by database designers as a blueprint for implementing data in specific software applications</li>
                     </ul>
 
-                    <div class="unique-p"> 
-						<p><b>Main components and symbols in an ER diagram:</b></p>
-					</div>
+						<h9><b>Main components and symbols in an ER diagram:</b></h9>
 
                     <ul>
                         <li><b>Rectangles:</b> represents entity types</li>
@@ -144,9 +138,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
                         <li><b>Primary Key:</b> attributes are underlined</li>
                     </ul>
 
-                    <div class="unique-p"> 
-						<p><b>Steps to creating an entity diagram:</b></p>
-					</div>
+						<h9><b>Steps to creating an entity diagram:</b></h9>
                     <ol>
                         <li><b>Identify the entities</b></li>
                             <ul>
@@ -181,8 +173,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				  <!-- Blog tags -->
 				  <div class="tag-widget post-tag-container mb-5 mt-5">
 					<div class="tagcloud">
-					  <a href="software-blogs.html" class="tag-cloud-link">Software</a>
-					  <a href="software-blogs.html" class="tag-cloud-link">Programming</a>
+					  <a href="blogs-sql.html" class="tag-cloud-link">SQL</a>
+					  <a href="blogs-data-architecture.html" class="tag-cloud-link">Data Architecture</a>
 					</div>
 				  </div>
 				  
@@ -289,8 +281,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				  <!-- .col-md-8 -->
 				  <!-- End Comment Section -->
 	
-				  <!-- Side bar area -->
-				  <div class="col-lg-4 sidebar ftco-animate">
+				 <!-- Side bar area -->
+				 <div class="col-lg-4 sidebar ftco-animate">
 					<div class="sidebar-box">
 					  <form action="#" class="search-form">
 						<div class="form-group">
@@ -301,70 +293,70 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="sidebar-box ftco-animate">
 						<h3 class="sidebar-heading">Categories</h3>
-					  <ul class="categories">
-						<li><a href="software-blogs.html">Software<span></span></a></li>
-						<li><a href="data-structures-and-algorithms-blogs.html">Data Structures<span></span></a></li>
-						<li><a href="system-managment-blogs.html">System Managment<span></span></a></li>
-						<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						<li><a href="sql-blogs.html">SQL<span></span></a></li>
-						<li><a href="java-blogs.html">Java<span></span></a></li>
-						<li><a href="c++blogs.html">C++<span></span></a></li>
-					  </ul>
+						<ul class="categories">
+							<li><a href="blogs-software.html">Software<span></span></a></li>
+							<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+							<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+							<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+							<li><a href="blogs-sql.html">SQL<span></span></a></li>
+							<li><a href="blogs-java.html">Java<span></span></a></li>
+							<li><a href="blogs-c++.html">C++<span></span></a></li>
+						  </ul>
 					</div>
 	
 					<!--Popular Articles -->
-					<!--Popular Article 1 -->
-					<div class="sidebar-box ftco-animate">
-					  <h3 class="sidebar-heading">Popular Articles</h3>
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Nov 2023</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+						<!--Popular Article 1 -->
+						<div class="sidebar-box ftco-animate">
+							<h3 class="sidebar-heading">Popular Articles</h3>
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Nov 2023</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
+							<!--Popular Article 2 -->
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog05.html">Entity Relationship (ER) Diagrams</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Oct 2023</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
+							<!--Popular Article 3 -->
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Aug 2022</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
 						  </div>
-						</div>
-					  </div>
-					  <!--Popular Article 2 -->
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog05.html">Entity Relationship (ER) Diagrams</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Oct 2023</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
-						  </div>
-						</div>
-					  </div>
-					  <!--Popular Article 3 -->
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Aug 2022</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
-						  </div>
-						</div>
-					  </div>
-					</div>
 	
 					<!-- Tag Cloud -->
 					<div class="sidebar-box ftco-animate">
 					  <h3 class="sidebar-heading">Tag Cloud</h3>
 					  <ul class="categories">
-						  <li><a href="software-blogs.html">Software <span></span></a></li>
-						  <li><a href="data-structures-and-algorithms-blogs.html">Data Structures <span></span></a></li>
-						  <li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
-						  <li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						  <li><a href="sql-blogs.html">SQL<span></span></a></li>
-						  <li><a href="java-blogs.html">Java<span></span></a></li>
-						  <li><a href="c++blogs.html">C++<span></span></a></li>
-						</ul>
+						<li><a href="blogs-software.html">Software<span></span></a></li>
+						<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+						<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+						<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+						<li><a href="blogs-sql.html">SQL<span></span></a></li>
+						<li><a href="blogs-java.html">Java<span></span></a></li>
+						<li><a href="blogs-c++.html">C++<span></span></a></li>
+					  </ul>
 					</div>
 	
 					<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
@@ -391,27 +383,27 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 				  </div>
 				  <!-- END COL -->
-	    		</div>
-	    	</div>
-	    </section>
-		<!-- End Side Bar -->
-
-		<!-- Bottom section -->
-		<!-- Footer -->
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
-			<div class="container px-md-5">
-			  <div class="row mb-5">
-				<div class="col-md">
-				  <div class="ftco-footer-widget mb-4 ml-md-4">
-					<h2 class="ftco-heading-2">Category</h2>
-					<ul class="categories">
-						<li><a href="software-blogs.html">Software <span></span></a></li>
-						<li><a href="data-structures-and-algorithms-blogs.html">Data Structures <span></span></a></li>
-						<li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
-						<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						<li><a href="sql-blogs.html">SQL<span></span></a></li>
-						<li><a href="java-blogs.html">Java<span></span></a></li>
-						<li><a href="c++blogs.html">C++<span></span></a></li>
+	
+				  <!-- Bottom Section -->
+					</div>
+				</div>
+			</section>
+	
+			<!-- Footer -->
+			<footer class="ftco-footer ftco-bg-dark ftco-section">
+			  <div class="container px-md-5">
+				<div class="row mb-5">
+				  <div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+					  <h2 class="ftco-heading-2">Topics</h2>
+					  <ul class="categories">
+						<li><a href="blogs-software.html">Software<span></span></a></li>
+						<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+						<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+						<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+						<li><a href="blogs-sql.html">SQL<span></span></a></li>
+						<li><a href="blogs-java.html">Java<span></span></a></li>
+						<li><a href="blogs-c++.html">C++<span></span></a></li>
 					  </ul>
 				  </div>
 				</div>
