--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
-						<li><a href="#" data-nav-section="work">Work</a></li>
+						<li><a href="#" data-nav-section="work">Projects</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -301,16 +301,16 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Completed Projects</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Coding Languages Used</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Current Projects</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Learned Data Structures</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Ongoing Projects</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="7" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Projects Created</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
@@ -558,7 +558,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2><a href="#">OptumRx</a> <span>April 25, 2022 - Present</span></h2>
+					                  <h2>OptumRx <span>April 25, 2022 - Present</span></h2>
 									  <h4>Customer Service Advocate</h4>
 					                <ul>
 										<li>Responded to incoming calls from customers with issues based on benefit eligibility and prescription and order statuses.</li>
@@ -579,7 +579,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Freelance Software Developer</a> <span>2022-Present</span></h2>
+					               	<h2>Freelance Software Developer <span>2022-Present</span></h2>
 					                  <p>Assist customers in the development of thier websites, developing functions, and designing programs.</p>
 									<ul>
 										<li>Deveop layouts for websites.</li>
@@ -598,7 +598,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">The Nurtured Child</a> <span>February 2014 – April 2022</span></h2>
+					               	<h2>The Nurtured Child <span>February 2014 – April 2022</span></h2>
 									<h4>Home Educator / Tutor</h4>
 									<ul>
 										<li>Work with families to create a personalized curriculum.</li>
@@ -620,7 +620,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Caregiver</a> <span>August 2020 – February 2022</span></h2>
+					               	<h2>Caregiver <span>August 2020 – February 2022</span></h2>
 									<ul>
 										<li>Communicated with a team of nurses of my mother-in-law’s condition and medication schedule.</li>
 										<li>Handled all bathing and grooming.</li>
@@ -641,7 +641,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Ross Dress for Less</a> <span>May 2019 - March 2020</span></h2>
+					               	<h2>Ross Dress for Less <span>May 2019 - March 2020</span></h2>
 									<h4>Stock Clerk</h4>
 									<ul>
 										<li>Demonstrated courtesy, friendliness, and professionalism at all times.</li>
@@ -672,32 +672,32 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				</div>
 			</section>
 
+			<!-- Recent Projects -->
 			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Work</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+							<span class="heading-meta">My Projects</span>
+							<h2 class="colorlib-heading animate-box">Recent Projects</h2>
 						</div>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
 							<p class="work-menu">
-								<span><a href="#" class="active">Websites</a></span> 
-								<span><a href="#">Apps</a></span> 
-								<span><a href="#">Software</a></span> 
-								<span><a href="#">Data Structures</a></span></p>
+								<span><a href="blogs-web-development.html" class="active">Websites</a></span> 
+								<span><a href="blogs-apps.html">Apps</a></span> 
+								<span><a href="blogs-software.html">Software</a></span> 
+								<span><a href="blogs-data-structures-and-algorithms.html">Data Structures and Algorithms</a></span></p>
 						</div>
 					</div>
 
-					<!-- Recent Projects -->
 					<!-- Article 1 -->
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/monsterra.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="the-aloha-thread-blog.html">The Aloha Thread</a></h3>
+										<h3><a href="project-the-aloha-thread-blog.html">The Aloha Thread</a></h3>
 										<span>Websites</span>
 										<p class="icon">
 											<span><a href=""><i class="icon-share3"></i></a></span>
@@ -713,7 +713,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/sewing-materials.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="fashion-fabricator-blog.html">Fashion Fabricator</a></h3>
+										<h3><a href="project-fashion-fabricator-blog.html">Fashion Fabricator</a></h3>
 										<span>Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -729,7 +729,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/board-games.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="antique-games-blog.html">Antique Games</a></h3>
+										<h3><a href="project-antique-games-blog.html">Antique Games</a></h3>
 										<span>Websites / Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -745,7 +745,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/magic-book.JPG);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="word-wizard-blog.html">Word Wizard</a></h3>
+										<h3><a href="project-word-wizard-blog.html">Word Wizard</a></h3>
 										<span>Websites</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -761,7 +761,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/galaxy.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="constellations-app.html">Constellations</a></h3>
+										<h3><a href="project-constellations-app.html">Constellations</a></h3>
 										<span>Wear Os</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -777,7 +777,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/health-map.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="health-map-blog.html">Health Map</a></h3>
+										<h3><a href="project-health-map-blog.html">Health Map</a></h3>
 										<span>Websites / Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -792,7 +792,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
+							<p><a href="blog-Projects.html" class="btn btn-primary btn-lg btn-load-more">Load more Projects <i class="icon-reload"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -815,9 +815,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog01.html" class="blog-img"><img src="images/tech/computer-vegetation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>Nov 2023 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<span><small>Nov 2022 </small> | <small> Software </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
 									<h3><a href="blog01.html">Software Methodologies</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>By understanding each type of methodolgy, it helps to determine
+										which methodology could work best for the team and project. </p>
 								</div>
 							</div>
 						</div>
@@ -827,9 +828,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog03.html" class="blog-img"><img src="images/tech/data-economy.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<span><small>Dec 2020 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
 									<h3><a href="blog03.html">Data Algorithms</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>ata Algorithms are a set of instructions used to solve a specific problem. Examples of Data Algorithms include search algorithms, sorting algorithms, and graph algorithms.</p>
 								</div>
 							</div>
 						</div>
@@ -839,9 +840,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog05.html" class="blog-img"><img src="images/tech/data-center.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Data Architecture </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<span><small>November 2022 </small> | <small> Data Architecture </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
 									<h3><a href="blog05.html">Entity Relationship (ER) Diagram</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Entity Relationship (ER) Diagrams are a visual representation of the table's structure and the relationships between logically related tables.</p>
 								</div>
 							</div>
 						</div>
@@ -849,7 +850,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<!-- Load more blogs -->
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<p><a href="blog-MainIndex.html" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
+							<p><a href="blog-MainIndex.html" class="btn btn-primary btn-lg btn-load-more">Load more recent blogs <i class="icon-reload"></i></a></p>
 						</div>
 					</div>
 				</div>
