--- a/blog12.html
+++ b/blog12.html
@@ -62,7 +62,8 @@
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
 						<li><a href="index.html" data-nav-section="work">Work</a></li>
-						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blog</a></li>
+						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
+						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -279,70 +280,70 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="sidebar-box ftco-animate">
 						<h3 class="sidebar-heading">Categories</h3>
-					  <ul class="categories">
-						<li><a href="software-blogs.html">Software<span></span></a></li>
-						<li><a href="data-structures-and-algorithms-blogs.html">Data Structures<span></span></a></li>
-						<li><a href="system-managment-blogs.html">System Managment<span></span></a></li>
-						<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						<li><a href="sql-blogs.html">SQL<span></span></a></li>
-						<li><a href="java-blogs.html">Java<span></span></a></li>
-						<li><a href="c++blogs.html">C++<span></span></a></li>
-					  </ul>
+						<ul class="categories">
+							<li><a href="blogs-software.html">Software<span></span></a></li>
+							<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+							<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+							<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+							<li><a href="blogs-sql.html">SQL<span></span></a></li>
+							<li><a href="blogs-java.html">Java<span></span></a></li>
+							<li><a href="blogs-c++.html">C++<span></span></a></li>
+						  </ul>
 					</div>
 	
 					<!--Popular Articles -->
-					<!--Popular Article 1 -->
-					<div class="sidebar-box ftco-animate">
-					  <h3 class="sidebar-heading">Popular Articles</h3>
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Nov 2023</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+						<!--Popular Article 1 -->
+						<div class="sidebar-box ftco-animate">
+							<h3 class="sidebar-heading">Popular Articles</h3>
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Nov 2023</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
+							<!--Popular Article 2 -->
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog05.html">Entity Relationship (ER) Diagrams</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Oct 2023</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
+							<!--Popular Article 3 -->
+							<div class="block-21 mb-4 d-flex">
+							  <a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
+							  <div class="text">
+								<h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
+								<div class="meta">
+								  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Aug 2022</a></div>
+								  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+								  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+								</div>
+							  </div>
+							</div>
 						  </div>
-						</div>
-					  </div>
-					  <!--Popular Article 2 -->
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog05.html">Entity Relationship (ER) Diagrams</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Oct 2023</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
-						  </div>
-						</div>
-					  </div>
-					  <!--Popular Article 3 -->
-					  <div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
-						<div class="text">
-						  <h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
-						  <div class="meta">
-							<div><a><span i class="glyphicon glyphicon-calendar"></i></span> Aug 2022</a></div>
-							<div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-							<div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
-						  </div>
-						</div>
-					  </div>
-					</div>
 	
 					<!-- Tag Cloud -->
 					<div class="sidebar-box ftco-animate">
 					  <h3 class="sidebar-heading">Tag Cloud</h3>
 					  <ul class="categories">
-						  <li><a href="software-blogs.html">Software <span></span></a></li>
-						  <li><a href="data-structures-and-algorithms-blogs.html">Data Structures <span></span></a></li>
-						  <li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
-						  <li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						  <li><a href="sql-blogs.html">SQL<span></span></a></li>
-						  <li><a href="java-blogs.html">Java<span></span></a></li>
-						  <li><a href="c++blogs.html">C++<span></span></a></li>
-						</ul>
+						<li><a href="blogs-software.html">Software<span></span></a></li>
+						<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+						<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+						<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+						<li><a href="blogs-sql.html">SQL<span></span></a></li>
+						<li><a href="blogs-java.html">Java<span></span></a></li>
+						<li><a href="blogs-c++.html">C++<span></span></a></li>
+					  </ul>
 					</div>
 	
 					<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
@@ -369,27 +370,27 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 				  </div>
 				  <!-- END COL -->
-	    		</div>
-	    	</div>
-	    </section>
-		<!-- End Side Bar -->
-
-		<!-- Bottom section -->
-		<!-- Footer -->
-	    <footer class="ftco-footer ftco-bg-dark ftco-section">
-			<div class="container px-md-5">
-			  <div class="row mb-5">
-				<div class="col-md">
-				  <div class="ftco-footer-widget mb-4 ml-md-4">
-					<h2 class="ftco-heading-2">Category</h2>
-					<ul class="categories">
-						<li><a href="software-blogs.html">Software <span></span></a></li>
-						<li><a href="data-structures-and-algorithms-blogs.html">Data Structures <span></span></a></li>
-						<li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
-						<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
-						<li><a href="sql-blogs.html">SQL<span></span></a></li>
-						<li><a href="java-blogs.html">Java<span></span></a></li>
-						<li><a href="c++blogs.html">C++<span></span></a></li>
+	
+				  <!-- Bottom Section -->
+					</div>
+				</div>
+			</section>
+	
+			<!-- Footer -->
+			<footer class="ftco-footer ftco-bg-dark ftco-section">
+			  <div class="container px-md-5">
+				<div class="row mb-5">
+				  <div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+					  <h2 class="ftco-heading-2">Topics</h2>
+					  <ul class="categories">
+						<li><a href="blogs-software.html">Software<span></span></a></li>
+						<li><a href="blogs-data-structures-and-algorithms.html">Data Structures<span></span></a></li>
+						<li><a href="blogs-system-managment.html">System Managment<span></span></a></li>
+						<li><a href="blogs-data-architecture.html">Data Architecture<span></span></a></li>
+						<li><a href="blogs-sql.html">SQL<span></span></a></li>
+						<li><a href="blogs-java.html">Java<span></span></a></li>
+						<li><a href="blogs-c++.html">C++<span></span></a></li>
 					  </ul>
 				  </div>
 				</div>
