--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -62,9 +62,8 @@
 						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
-						<li><a href="index.html" data-nav-section="work">Work</a></li>
-						<li><a href="blog-MainIndex.html" data-nav-section="blog">Blog</a></li>
 						<li class="active"><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
+						<li><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -103,6 +102,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	    	<div class="container">
 	    		<!-- First Blog -->
 				<div class="row">
+					<h1>Sorry for the mess. We are working on getting this page updated as soon as possible. Thank you for your patience!</h1>
                     <h7><b>Latest Projects</b></h7>
 					<div class="col-lg-8">
 	    				<div class="row">
