--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -62,9 +62,8 @@
 						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
-						<li><a href="index.html" data-nav-section="work">Work</a></li>
-						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
+						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -105,24 +104,23 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-8 ftco-animate">
-	            <h1 class="mb-3 font-weight-bold">The Aloha Thread</h1>
+						<h1>Sorry for the mess. We are working on getting this page updated as soon as possible. Thank you for your patience!</h1>
+	            		<h8 class="mb-3 font-weight-bold">The Aloha Thread</h8>
 
-					<span>Written by</span>
+					<p>Written by</p>
 					<h3><a href="index.html"> Carissa O'Connell</a></h3>
-					<p>November 20, 2022; Updated: Jan 2023</p>
+					<p>Jan 2020; Updated: Jan 2023</p>
 
 					<!-- Blog -->
 
 					<p>Helping to develop a website has shown me how important it is to understand layouts and UI/UX design.
+						I also learned about API's and  their importance in connecting different applications together and feeding real time
+					information onto the page; such as comments.</p>
                     </p>
 
-                    <div class="unique-p"> 
-						<p><b><a href="alohathread.github.io">The Aloha Thread</a></b></p>
-					</div>
+					<p><h10><b><a href="alohathread.github.io">The Aloha Thread</a></b></h10></p>
 
-                    <div class="unique-p"> 
-						<p><b>UI/UX designs</b></p>
-					</div>
+					<h9><b>UI/UX designs</b></h9>
 
                     
 					<!-- End Blog -->
