--- a/blog05.html
+++ b/blog05.html
@@ -62,10 +62,9 @@
 						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
-						<li><a href="index.html" data-nav-section="work">Work</a></li>
-						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
-						<li><a href="#" data-nav-section="contact">Contact</a></li>
+						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
+						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
